feat(NGINX): connection with API
- route /me redirecting to /profile/<username>
- isOwner check for display of sensitive fields (no role check)
- queries using Axios and ReactQuery
- register and login from dev buttons
- user info stored in LocalStorage (temporary solution, not secure)
- nginx config + add Vite dev port to CORS

fix(GATE): types of user
chore(UM): change path to GET /username/:username
chore(AUTH): less verbose logs for /health

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - app-network
     volumes:
       - uploads:/usr/share/nginx/html/uploads
+      # - ./secrets/ssl:/etc/nginx/ssl:ro
     restart: unless-stopped
     depends_on:
       api-gateway:
