--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -3,8 +3,7 @@ server {
     listen 80;
     server_name localhost;
 
-    
-    return 308 https://$host:4430$request_uri;
+    return 308 https://$host:443$request_uri;
 }
 
 server {
@@ -25,12 +24,18 @@ server {
 
     # Docker internal DNS resolver
     resolver 127.0.0.11 valid=5s;
-    # Podman internal DNS resolver
-    # resolver 10.0.0.89 valid=5s;
 
     root /usr/share/nginx/src/html;
     index index.html;
     
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    # Remove any forged user headers
+    proxy_set_header x-user-name "";
+    proxy_set_header x-user-id "";
+
     location /health {
         access_log off;
         return 200 "healthy\n";
@@ -42,43 +47,20 @@ server {
     location ^~ /users/doc/ {
       proxy_pass http://user-service:3002/doc/;  # container name + port
       proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-
-      # Remove any forged user headers
-      proxy_set_header x-user-name "";
-      proxy_set_header x-user-id "";
-
       proxy_set_header Upgrade "";
       proxy_set_header Connection "";
     }
 
     location /api/ {
-      # Backend
+      client_max_body_size 50M;
+      add_header 'Access-Control-Allow-Credentials' 'true' always;
       proxy_pass http://api-gateway:3000;
-
+      proxy_pass_request_headers on;
       proxy_http_version 1.1;
-
-      # Correct headers
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Origin $scheme://$host;
-
-      # SECURITY: Supprimer les headers forgés du client
-      proxy_set_header x-user-name "";
-      proxy_set_header x-user-id "";
-
       # Especially important: disable websocket upgrade here
       proxy_set_header Upgrade "";
       proxy_set_header Connection "";
 
-      # Forward body & headers
-      proxy_pass_request_body on;
-      proxy_pass_request_headers on;
     }
 	
     location /api/game/ {
@@ -88,16 +70,6 @@ server {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
 
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Origin $scheme://$host;
-
-      # SECURITY: Supprimer les headers forgés du client
-      proxy_set_header x-user-name "";
-      proxy_set_header x-user-id "";
-
       proxy_read_timeout 3600;
       proxy_send_timeout 3600;
 	}
@@ -105,44 +77,20 @@ server {
 	location /public/ {
     rewrite ^/public/(.*)$ /$1 break;
     proxy_pass http://api-gateway:3000;
-    proxy_http_version 1.1;
 
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Origin $scheme://$host;
-
-    # SECURITY: Supprimer les headers forgés du client
-    proxy_set_header x-user-name "";
-    proxy_set_header x-user-id "";
-
-    proxy_set_header Upgrade "";
-    proxy_set_header Connection "";
     }
 
-    # Serve static files directly
-    location / {
-      try_files $uri $uri/ =404;
-    }
-
-    location /uploads/ {
-      alias /usr/share/nginx/html/uploads;
-      try_files $uri =404;
-      autoindex off;
-    }
+    # location /uploads/ {
+    #   alias /usr/share/nginx/html/uploads;
+    #   autoindex off;
+    # }
 
     location /assets/ {
         alias /usr/share/nginx/html/assets/;
         try_files $uri =404;
     }
 
-    # Ensure proper MIME types
-    # location ~* \.js$ {
-    #   add_header Content-Type application/javascript;
-    # }
-
-    # location ~* \.css$ {
-    #   add_header Content-Type text/css;
-    # }
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
 }
