--- a/srcs/nginx/package.json
+++ b/srcs/nginx/package.json
@@ -32,7 +32,9 @@
     "webpack": "^5.103.0"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
     "@transcendence/core": "1.1.0",
+    "axios": "^1.13.2",
     "envalid": "^8.1.1",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
