--- a/srcs/users/tsconfig.json
+++ b/srcs/users/tsconfig.json
@@ -7,7 +7,6 @@
     "noEmit": true,
     "baseUrl": "./",
     "outDir": "./dist",
-    "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
     "strict": true, // strict type check
     "esModuleInterop": true, // allow imports from CommonJS modules
     "skipLibCheck": true,
@@ -25,7 +24,8 @@
     "sourceMap": true, // debug
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "typeRoots": ["./node_modules/@types", "../../node_modules/@types"]
   },
   "include": ["src/**/*", "test/**/*", "prisma/prisma.config.ts"],
   "exclude": ["node_modules", "dist"]
