--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -44,12 +44,12 @@ server {
 
     # Users service Swagger UI
     # ^~ to prevent regex locations from serving static assets for this route
-    location ^~ /users/doc/ {
-      proxy_pass http://user-service:3002/doc/;  # container name + port
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade "";
-      proxy_set_header Connection "";
-    }
+    # location ^~ /doc/users {
+    #   proxy_pass http://user-service:3002/doc/;  # container name + port
+    #   proxy_http_version 1.1;
+    #   proxy_set_header Upgrade "";
+    #   proxy_set_header Connection "";
+    # }
 
     location /api/ {
       client_max_body_size 50M;
@@ -61,6 +61,20 @@ server {
       proxy_set_header Upgrade "";
       proxy_set_header Connection "";
 
+    }
+
+    location ^~ /doc/users/ {
+      proxy_pass http://user-service:3002/doc/;
+      # proxy_pass_request_headers on;
+      proxy_http_version 1.1;
+      # Especially important: disable websocket upgrade here
+      proxy_set_header Upgrade "";
+      proxy_set_header Connection "";
+      proxy_set_header X-Forwarded-Prefix /doc/users;
+    }
+
+    location = /doc/users {
+      return 301 $scheme://$http_host$request_uri/;
     }
 	
     location /api/game/ {
