--- a/srcs/dev-docker-compose.yml
+++ b/srcs/dev-docker-compose.yml
@@ -12,10 +12,10 @@ services:
     build:
       context: ./nginx
       dockerfile: Dockerfile.dev
-    container_name: "${PROXY_SERVICE_NAME}"
+    container_name: '${PROXY_SERVICE_NAME}'
     ports:
-      - "8080:80"
-      - "4430:443"
+      - '8080:80'
+      - '4430:443'
     volumes:
       - ./nginx/src:/usr/share/nginx/src
       - uploads:/usr/share/nginx/html/uploads
@@ -24,20 +24,20 @@ services:
     restart: unless-stopped
     depends_on:
       api-gateway:
-        condition: service_started
+        condition: service_healthy
     healthcheck:
       <<: *healthcheck-template
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost/health"]
+      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://localhost/health']
       start_period: 5s
 
   # Main Fastify API
   api-gateway:
     build:
       context: ../
-      dockerfile: "srcs/gateway/Dockerfile"
-    container_name: "${API_GATEWAY_NAME}-dev"
+      dockerfile: 'srcs/gateway/Dockerfile'
+    container_name: '${API_GATEWAY_NAME}-dev'
     expose:
-      - "${API_GATEWAY_PORT}"
+      - '${API_GATEWAY_PORT}'
     env_file:
       - path: ./.env
       - path: ./.env.gateway
@@ -53,9 +53,9 @@ services:
     build:
       context: ./auth
       dockerfile: Dockerfile
-    container_name: "${AUTH_SERVICE_NAME}"
+    container_name: '${AUTH_SERVICE_NAME}'
     expose:
-      - "${AUTH_SERVICE_PORT}"
+      - '${AUTH_SERVICE_PORT}'
     env_file:
       - path: ./.env
       - path: ./.env.auth
@@ -69,18 +69,26 @@ services:
         condition: service_healthy
     healthcheck:
       <<: *healthcheck-template
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${AUTH_SERVICE_PORT}/health"]
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://localhost:${AUTH_SERVICE_PORT}/health',
+        ]
 
   # Blockchain service
   blockchain-service:
     build:
       context: ./blockchain
       dockerfile: Dockerfile.dev
-    container_name: "${BK_SERVICE_NAME}"
+    container_name: '${BK_SERVICE_NAME}'
     ports:
       - '3005:3005'
     expose:
-      - "${BK_SERVICE_PORT}"
+      - '${BK_SERVICE_PORT}'
     environment:
       - NODE_ENV=development
       - BLOCK_DB_PATH=/data/blockchain.db
@@ -96,19 +104,27 @@ services:
       - ./blockchain/nodemon.json:/app/nodemon.json
     networks:
       - app-network
-    restart: "no"
+    restart: 'no'
     healthcheck:
       <<: *healthcheck-template
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${BK_SERVICE_PORT}/health"]
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://localhost:${BK_SERVICE_PORT}/health',
+        ]
 
   # Game service with development volume mount
   game-service:
     build:
       context: ./game
       dockerfile: Dockerfile
-    container_name: "${GAME_SERVICE_NAME}"
+    container_name: '${GAME_SERVICE_NAME}'
     expose:
-      - "${GAME_SERVICE_PORT}"
+      - '${GAME_SERVICE_PORT}'
     env_file:
       - path: ./.env
       - path: ./.env.game
@@ -119,16 +135,24 @@ services:
     restart: unless-stopped
     healthcheck:
       <<: *healthcheck-template
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${GAME_SERVICE_PORT}/health"]
-  
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://localhost:${GAME_SERVICE_PORT}/health',
+        ]
+
   # Redis broker
   redis-broker:
     build:
       context: ./redis
       dockerfile: Dockerfile
-    container_name: "${REDIS_SERVICE_NAME}"
+    container_name: '${REDIS_SERVICE_NAME}'
     expose:
-      - "${REDIS_SERVICE_PORT}"
+      - '${REDIS_SERVICE_PORT}'
     networks:
       - app-network
     restart: unless-stopped
@@ -138,9 +162,9 @@ services:
     build:
       context: ..
       dockerfile: srcs/users/Dockerfile
-    container_name: "${UM_SERVICE_NAME}-dev"
+    container_name: '${UM_SERVICE_NAME}-dev'
     expose:
-      - "${UM_SERVICE_PORT}"
+      - '${UM_SERVICE_PORT}'
     env_file:
       - path: ./.env
       - path: ./.env.um
@@ -151,11 +175,19 @@ services:
     restart: unless-stopped
     healthcheck:
       <<: *healthcheck-template
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:${UM_SERVICE_PORT}/health"]
-   
+      test:
+        [
+          'CMD',
+          'wget',
+          '--no-verbose',
+          '--tries=1',
+          '--spider',
+          'http://localhost:${UM_SERVICE_PORT}/health',
+        ]
+
 networks:
-    app-network:
-      driver: bridge
+  app-network:
+    driver: bridge
 
 volumes:
   data:
