--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -48,6 +48,7 @@ RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
 # Copy nginx config
 COPY srcs/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY srcs/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
+COPY srcs/nginx/conf.d/proxy_headers.conf /etc/nginx/conf.d/proxy_headers.conf
 
 # Copy React app built with Vite
 COPY --from=builder /build/srcs/nginx/dist /usr/share/nginx/src/html/
