feat(block): config deploy on Fuji tesnet
fix(block): ubpdate some static file lonks
feat(block): add background of front in Dapp

srcs/.env.blockchain.example
srcs/blockchain/.env.test.blockchain
srcs/blockchain/src/SmartContract/hardhat.config.ts
srcs/blockchain/src/config/env.ts
srcs/blockchain/src/core/error.ts
srcs/blockchain/src/module/block.consumers.ts
srcs/blockchain/src/public/bg.svg
srcs/blockchain/src/public/output.css
srcs/blockchain/src/public/style-block.css
srcs/blockchain/src/views/header.ejs
srcs/blockchain/src/views/index.ejs
srcs/blockchain/src/views/snapshot-details.ejs
srcs/blockchain/src/views/snapshots.ejs

--- a/srcs/.env.blockchain.example
+++ b/srcs/.env.blockchain.example
@@ -1,5 +1,6 @@
 BLOCK_DB_PATH=/data/blockchain.db
-AVALANCHE_RPC_URL=http://localhost:8545
+#LOCALHOST_RPC_URL=http://localhost:8545
+AVALANCHE_RPC_URL=https://api.avax-test.network/ext/bc/C/rpc
 GAME_STORAGE_ADDRESS=0x...
 BLOCKCHAIN_PRIVATE_KEY=0x...
 BLOCKCHAIN_READY=false
