--- a/srcs/nginx/tsconfig.json
+++ b/srcs/nginx/tsconfig.json
@@ -19,6 +19,6 @@
     "jsx": "react-jsx",
     "types": ["vite/client"]
   },
-  "include": ["src"],
+  "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules", "dist"]
 }
