--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -76,6 +76,11 @@ server {
       return 301 $scheme://$http_host$request_uri/;
     }
 
+    location = /dashboard {
+      alias /usr/share/nginx/html/dashboard.html;
+      default_type text/html;
+    }
+
     location /api/ {
       proxy_http_version 1.1;
       proxy_pass http://api-gateway:3000;
