--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -126,9 +126,9 @@ server {
         proxy_send_timeout 3600s;     # 1h - temps max sans envoi de données
         proxy_read_timeout 3600s;     # 1h - temps max sans réception de données
     }
-    # location = /blockchain {
-    #     return 301 /blockchain/;
-    # }
+    location = /blockchain {
+        return 301 /blockchain/;
+    }
     location /blockchain/ {
         proxy_pass http://blockchain-service:3005/;
         proxy_http_version 1.1;
