feat(https): wip transfert school to home
Makefile
make/scripts/certs/generate_certs.sh
package-lock.json
srcs/auth/src/index.ts
srcs/blockchain/src/app.ts
srcs/docker-compose.yml
srcs/gateway/src/controllers/health.controller.ts
srcs/gateway/src/index.ts
srcs/gateway/src/utils/mtlsAgent.ts
srcs/nginx/conf.d/default.conf
srcs/users/src/app.ts

--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -52,7 +52,7 @@ server {
 
     # Swagger UI - Users service documentation
     location ^~ /users/doc/ {
-        proxy_pass https://user-service:${USER_SERVICE_PORT}/doc/;
+        proxy_pass https://user-service:3002/doc/;
         proxy_http_version 1.1;
 
         proxy_ssl_certificate     /etc/nginx/certs/nginx.crt;
@@ -85,7 +85,7 @@ server {
 
     # API REST - Gateway (toutes routes /api/* sauf /api/game/*)
     location /api/ {
-        proxy_pass https://api-gateway:${API_GATEWAY_PORT};
+        proxy_pass https://api-gateway:3000;
         proxy_http_version 1.1;
 
         proxy_ssl_certificate     /etc/nginx/certs/nginx.crt;
@@ -122,7 +122,7 @@ server {
 
     # WebSocket - Pong game (location plus spécifique que /api/)
     location /api/game/ {
-        proxy_pass https://api-gateway:${API_GATEWAY_PORT};
+        proxy_pass https://api-gateway:3000;
         proxy_http_version 1.1;
 
         proxy_ssl_certificate     /etc/nginx/certs/nginx.crt;
@@ -173,8 +173,8 @@ server {
     # Public files
     location /public/ {
         # Réécriture: /public/file.jpg → /file.jpg côté backend
-        rewrite ^/public/(.*)$ /$1 break;
-        proxy_pass https://api-gateway:${API_GATEWAY_PORT};
+        #rewrite ^/public/(.*)$ /$1 break;
+        proxy_pass https://api-gateway:3000/;
         proxy_http_version 1.1;
 
         proxy_ssl_certificate     /etc/nginx/certs/nginx.crt;
@@ -183,6 +183,8 @@ server {
 
         proxy_ssl_verify on;
         proxy_ssl_verify_depth 2;
+        proxy_ssl_server_name on;
+        proxy_ssl_name api-gateway;
 
         # Headers standard
         proxy_set_header Host $host;
