--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -46,7 +46,7 @@ services:
     restart: unless-stopped
     healthcheck:
       <<: *healthcheck-template
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://127.0.0.1:${UM_SERVICE_PORT}/health']
+      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--no-check-certificate', '--spider', 'https://127.0.0.1:${UM_SERVICE_PORT}/health']
 
   auth-service:
     build:
@@ -70,7 +70,7 @@ services:
         condition: service_healthy
     healthcheck:
       <<: *healthcheck-template
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://127.0.0.1:${AUTH_SERVICE_PORT}/health']
+      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--no-check-certificate', '--spider', 'https://127.0.0.1:${AUTH_SERVICE_PORT}/health']
 
   blockchain-service:
     build:
@@ -91,7 +91,7 @@ services:
     restart: unless-stopped
     healthcheck:
       <<: *healthcheck-template
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://127.0.0.1:${BK_SERVICE_PORT}/health']
+      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--no-check-certificate', '--spider', 'https://127.0.0.1:${BK_SERVICE_PORT}/health']
 
   game-service:
     build:
@@ -114,7 +114,7 @@ services:
         condition: service_healthy
     healthcheck:
       <<: *healthcheck-template
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://127.0.0.1:${GAME_SERVICE_PORT}/health']
+      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--no-check-certificate', '--spider', 'https://127.0.0.1:${GAME_SERVICE_PORT}/health']
 
   # ============================================================================
   # API Gateway Layer
@@ -141,7 +141,7 @@ services:
         condition: service_healthy
     healthcheck:
       <<: *healthcheck-template
-      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--spider', 'http://127.0.0.1:${API_GATEWAY_PORT}/health']
+      test: ['CMD', 'wget', '--no-verbose', '--tries=1', '--no-check-certificate', '--spider', 'https://127.0.0.1:${API_GATEWAY_PORT}/health']
 
   # ============================================================================
   # Reverse Proxy Layer
