--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -46,6 +46,7 @@
     "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "fastify-type-provider-zod": "^6.1.0",
+    "file-type": "^21.3.0",
     "ioredis": "^5.8.2",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
