--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "vite",
     "prebuild": "prisma generate",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "vite build",
     "start": "node dist/index.js",
     "preview": "vite preview",
     "pretest": "prisma generate",
