--- a/srcs/auth/package.json
+++ b/srcs/auth/package.json
@@ -26,11 +26,12 @@
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.4.1",
     "fastify": "^5.6.2",
+    "otplib": "^12.0.1",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.3",
     "pino-std-serializers": "^7.0.0",
-    "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
+    "undici": "^7.19.0",
     "zod": "^3.25.2"
   }
 }
