feat(ci): add step to make envs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,6 +132,9 @@ jobs:
           echo "🔧 Configuring test environment..."
           # Note: Tests expect admin/invite users to be pre-seeded or auto-created
 
+      - name: Make envs
+        run: make envs
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
