--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -27,7 +27,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-node": "^11.1.0",
     "globals": "^16.5.0",
-    "prisma": "^7.0.0",
+    "prisma": "7.3.0",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vitest": "^4.0.16"
@@ -37,7 +37,7 @@
     "@fastify/multipart": "^9.3.0",
     "@fastify/swagger": "^9.6.1",
     "@prisma/adapter-better-sqlite3": "^7.0.0",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "7.3.0",
     "@scalar/fastify-api-reference": "^1.40.9",
     "@transcendence/core": "^1.1.0",
     "better-sqlite3": "^12.4.1",
