fix(https): health route check and tests
srcs/blockchain/src/module/block.routes.ts
srcs/gateway/src/controllers/block.controller.ts
srcs/gateway/src/controllers/game.controller.ts
srcs/nginx/conf.d/default.conf
srcs/tests/test_gateway.py

--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -143,11 +143,11 @@ server {
         proxy_send_timeout 3600;
     }
 
-    location = /blockchain {
-        return 301 /blockchain/;
-    }
-    location /blockchain/ {
-        proxy_pass https://blockchain-service:3005/;
+    # location = /blockchain {
+    #     return 301 /blockchain/;
+    # }
+    location /blockchain {
+        proxy_pass https://blockchain-service:3005;
         proxy_http_version 1.1;
         
         proxy_ssl_certificate     /etc/nginx/certs/nginx.crt;
