fix(AUTH, NGINX): display api errors
- register : 400, 409 (username, email) - in progress for 400 from backend

chore: build within dockerfile

--- a/srcs/auth/Dockerfile
+++ b/srcs/auth/Dockerfile
@@ -3,20 +3,24 @@
 # ==========================
 FROM node:20-alpine AS builder
 
+RUN apk add --no-cache wget python3 make g++
 WORKDIR /app
 
 # Installer les deps (dev + prod)
-COPY package.json package-lock.json ./
-RUN npm install
+COPY package*.json ./
+COPY srcs/shared/core/package*.json ./srcs/shared/core/
+COPY srcs/auth/package*.json ./srcs/auth/
+RUN npm ci
 
-# Copier le code source
-COPY tsconfig.json ./
-COPY src ./src
+COPY srcs/shared/core/ ./srcs/shared/core
+COPY srcs/auth ./srcs/auth
 
-# Compiler TypeScript → dist/
-RUN npm run build
+# RUN npm run build -w @transcendence/core
+# RUN npm run build -w @transcendence/auth
+RUN npx tsc -b srcs/auth/tsconfig.json --force
 
-
+WORKDIR /app
+RUN npm prune --omit=dev
 
 # ==========================
 # Stage 2 — Production
@@ -24,18 +28,22 @@ RUN npm run build
 FROM node:20-alpine AS runner
 
 WORKDIR /app
+ENV NODE_ENV=production
+
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/srcs/shared/core/dist ./srcs/shared/core/dist
+COPY --from=builder /app/srcs/shared/core/package.json ./srcs/shared/core/package.json
+
+WORKDIR /app/srcs/auth
+COPY --from=builder /app/srcs/auth/package.json ./
+COPY --from=builder /app/srcs/auth/dist ./dist
+
+ENV HUSKY=0
+ENV NODE_ENV=production
 
 # Installer wget pour health check
-RUN apk add --no-cache wget
-RUN apk add --no-cache python3 make g++
-# Copier uniquement package.json pour installer deps prod
-COPY package.json package-lock.json ./
-
-# Installer uniquement les deps nécessaires en runtime
-RUN npm install --omit=dev
-
-# Copier build compilé depuis le builder
-COPY --from=builder /app/dist ./dist
+# RUN apk add --no-cache wget
+# RUN apk add --no-cache python3 make g++
 
 EXPOSE 3001
 
