--- a/srcs/auth/package.json
+++ b/srcs/auth/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "transcendance",
+  "name": "@transcendence/auth",
   "version": "1.0.0",
   "type": "module",
   "private": true,
   "scripts": {
     "dev": "concurrently \"tsc -p tsconfig.json -w\" \"nodemon --watch dist --exec node dist/index.js\"",
-    "build": "tsc -p tsconfig.json",
-    "start": "tsc -p tsconfig.json && node dist/index.js"
+    "build": "tsc -b tsconfig.json",
+    "start": "node dist/index.js"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -23,6 +23,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/jwt": "^10.0.0",
     "@fastify/rate-limit": "^10.1.1",
+    "@transcendence/core": "*",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.4.1",
     "fastify": "^5.6.2",
@@ -31,6 +32,6 @@
     "pino-std-serializers": "^7.0.0",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
-    "zod": "^3.25.2"
+    "zod": "^4.2.1"
   }
 }
