--- a/srcs/shared/core/tsconfig.json
+++ b/srcs/shared/core/tsconfig.json
@@ -17,6 +17,7 @@
     "inlineSources": true,
 
     "composite": true,
+    "incremental": true,
     "declaration": true,
     "declarationMap": true,
     "rootDir": "src",
