--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -11,8 +11,8 @@ services:
 
   redis-broker:
     build:
-      context: ./redis
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: srcs/redis/Dockerfile
     container_name: ${REDIS_SERVICE_NAME}
     expose:
       - '${REDIS_SERVICE_PORT}'
@@ -53,8 +53,8 @@ services:
 
   auth-service:
     build:
-      context: ./auth
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: srcs/auth/Dockerfile
     container_name: ${AUTH_SERVICE_NAME}
     expose:
       - '${AUTH_SERVICE_PORT}'
@@ -77,8 +77,8 @@ services:
 
   blockchain-service:
     build:
-      context: ./blockchain
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: srcs/blockchain/Dockerfile
     container_name: ${BK_SERVICE_NAME}
     expose:
       - '${BK_SERVICE_PORT}'
@@ -98,8 +98,8 @@ services:
 
   game-service:
     build:
-      context: ./game
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: srcs/game/Dockerfile
     container_name: ${GAME_SERVICE_NAME}
     expose:
       - '${GAME_SERVICE_PORT}'
