--- a/srcs/users/Dockerfile
+++ b/srcs/users/Dockerfile
@@ -1,99 +1,64 @@
 # ==========================
 # Stage 1 — Builder
 # ==========================
-
-# ==========================
-# Paths should be written from root
-# ==========================
-
 FROM node:20-alpine AS builder
 
-# needed for better-sqlite3
+# Native deps for better-sqlite3
 RUN apk add --no-cache python3 make g++
+
 WORKDIR /app
 
-# Copy root package files for workspace resolution
+# 1. Copy ROOT workspace manifests
 COPY package.json package-lock.json ./
 
-# Copy shared core package files
-COPY srcs/shared/core/package.json ./srcs/shared/core/package.json
-COPY srcs/shared/core/tsconfig.json ./srcs/shared/core/tsconfig.json
-
-# Copy users service package files
+# les manisfests du service
 COPY srcs/users/package.json ./srcs/users/package.json
-COPY srcs/users/package-lock.json ./srcs/users/package-lock.json
 
-# Install dependencies for workspace (this links @transcendence/core)
+# 2. Install full workspace deps (deterministic)
 RUN npm ci
 
-# Copy and build shared core first - done before in Makefile yet 
-COPY srcs/shared/core/src ./srcs/shared/core/src
-RUN npm run build --workspace srcs/shared/core
+# 3. Copy full monorepo
+COPY . .
 
-# Copy users service source files
-COPY srcs/users/tsconfig.json ./srcs/users/tsconfig.json
-COPY srcs/users/tsconfig.build.json ./srcs/users/tsconfig.build.json
-COPY srcs/users/src ./srcs/users/src
-COPY srcs/users/entrypoint.sh ./srcs/users/entrypoint.sh
-
-# Copy Prisma files
-COPY srcs/users/prisma ./srcs/users/prisma
-COPY srcs/users/prisma.config.ts ./srcs/users/prisma.config.ts
-
-# Generate Prisma client
+# 4. Generate Prisma client (users workspace)
 WORKDIR /app/srcs/users
 RUN npx prisma generate
 
-# Build → dist/
-RUN npm run build
+# 5. Build users service ONLY
+WORKDIR /app
+RUN npm run build --workspace srcs/users
+
 
 # ==========================
-# Stage 2 — Production
+# Stage 2 — Runner
 # ==========================
+FROM node:20-alpine
 
-FROM node:20-alpine AS runner
-
-# Keep the same workspace root as builder
 WORKDIR /app
 
-# Shared core package
-COPY --from=builder /app/srcs/shared/core/package.json ./srcs/shared/core/package.json
+ENV NODE_ENV=production
 
-# ROOT package defs
-COPY --from=builder /app/package.json /app/package-lock.json ./
+# 6. Copy runtime deps and built artefacts
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/srcs/users/dist ./dist
 
-# USER package defs
-COPY --from=builder /app/srcs/users/package.json ./srcs/users/package.json
-COPY --from=builder /app/srcs/users/package-lock.json ./srcs/users/package-lock.json
+# Prisma runtime files
+COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
 
-# Install production dependencies (workspace resolution works because structure matches)
-RUN npm ci --omit=dev
+# Config & prisma schema (runtime usage)
+COPY --from=builder /app/srcs/users/src/config ./src/config
+COPY --from=builder /app/srcs/users/prisma ./prisma
+COPY --from=builder /app/srcs/users/prisma.config.ts ./prisma.config.ts
 
-# Get Prisma client from root modules (not service)
-COPY --from=builder /app/node_modules/.prisma /app/node_modules/.prisma
-
-# Copy built artefacts
-COPY --from=builder /app/srcs/shared/core/dist ./srcs/shared/core/dist
-COPY --from=builder /app/srcs/users/dist ./srcs/users/dist
-
-# Copy Config and Prisma files
-COPY --from=builder /app/srcs/users/src/config/ ./srcs/users/src/config
-COPY --from=builder /app/srcs/users/prisma ./srcs/users/prisma
-COPY --from=builder /app/srcs/users/prisma.config.ts ./srcs/users/prisma.config.ts
-
-# Skip husky in production
-ENV HUSKY=0
-
-# Create data directory and set permissions (only for /app/srcs/users)
-RUN mkdir -p /app/data /app/uploads
-
-# Change to users service directory
-WORKDIR /app/srcs/users
-
-# Copy entrypoint
+# Entry point
 COPY --from=builder /app/srcs/users/entrypoint.sh ./entrypoint.sh
 RUN chmod +x ./entrypoint.sh
 
-ENTRYPOINT [ "./entrypoint.sh" ]
+# Runtime dirs
+RUN mkdir -p /app/data /app/uploads
 
+EXPOSE 5555
+
+ENTRYPOINT ["./entrypoint.sh"]
 CMD ["node", "dist/index.js"]
+
