--- a/srcs/nginx/conf.d/default.conf
+++ b/srcs/nginx/conf.d/default.conf
@@ -41,6 +41,7 @@ server {
     # resolver 127.0.0.11;  # Désactivé: source de 502 intermittents
 
     # Static files
+    #default root /usr/share/nginx/html;
     root /usr/share/nginx/src/html;
     index index.html;
 
