--- a/srcs/auth/Dockerfile
+++ b/srcs/auth/Dockerfile
@@ -5,24 +5,23 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# 1) Manifests nécessaires au calcul du graphe workspace
 # Copy ROOT workspace manifests
 COPY package.json package-lock.json ./
-
 # les manisfests du service
 COPY srcs/auth/package.json ./srcs/auth/package.json
-
 # Copy shared core package files
 COPY srcs/shared/core/package*.json ./srcs/shared/core/
 COPY srcs/shared/core/tsconfig.json ./srcs/shared/core/tsconfig.json
 
-# Install full workspace deps
+# 2) Installation déterministe (workspaces)
 RUN npm ci
 
-# Copy full monorepo
+# 3) Sources minimales nécessaires au build
 COPY srcs/auth ./srcs/auth
 COPY srcs/shared/core/src ./srcs/shared/core/src
 
-# Build auth-service only
+# 4) Build (core puis auth)
 RUN npm run build --workspace srcs/shared/core
 RUN npm run build --workspace srcs/auth
 
@@ -39,17 +38,19 @@ ENV NODE_ENV=production
 # Install runtime-only system deps (wget for healthcheck)
 RUN apk add --no-cache wget
 
-COPY package.json package-lock.json ./
-COPY srcs/auth/package.json ./srcs/auth/package.json
-RUN npm ci --omit=dev --workspace srcs/auth
+# 5) Installer UNIQUEMENT les dépendances runtime du workspace users
+COPY package-lock.json ./package-lock.json
+COPY srcs/auth/package.json ./package.json
+# audit and fund are done in builder
+RUN npm install --omit=dev --no-audit --no-fund
 
-# Créer le namespace
+# 6) Injecter le package interne @transcendence/core (compilé)
 RUN mkdir -p node_modules/@transcendence
 # Copier le package core compilé
 COPY --from=builder /app/srcs/shared/core/package.json ./node_modules/@transcendence/core/package.json
 COPY --from=builder /app/srcs/shared/core/dist ./node_modules/@transcendence/core/dist
 
-# Copy runtime deps and built artefacts
+# 7) Artifacts runtime du service
 COPY --from=builder /app/srcs/auth/dist ./dist
 
 EXPOSE 3001
