--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -22,6 +22,8 @@ COPY srcs/shared/core/src ./srcs/shared/core/src
 
 # Copy only nginx frontend sources
 COPY srcs/nginx ./srcs/nginx
+COPY srcs/nginx/src/html/dashboard.html ./srcs/nginx/html/dashboard.html
+COPY srcs/nginx/src/html/admin.html ./srcs/nginx/html/admin.html
 
 # Build frontend (Vite)
 RUN npm run build --workspace srcs/shared/core
@@ -44,8 +46,12 @@ COPY srcs/nginx/nginx.conf /etc/nginx/nginx.conf
 COPY srcs/nginx/conf.d/default.conf /etc/nginx/conf.d/default.conf
 COPY srcs/nginx/conf.d/proxy_headers.conf /etc/nginx/conf.d/proxy_headers.conf
 
-# Copy built frontend
-COPY --from=builder /app/srcs/nginx/dist /usr/share/nginx/html
+# Copy built frontend React app built with Vite
+COPY --from=builder /app/srcs/nginx/dist /usr/share/nginx/src/html
+# Copy dashboard
+COPY --from=builder /app/srcs/nginx/html/dashboard.html /usr/share/nginx/src/html/
+# Copy admin page
+COPY --from=builder /app/srcs/nginx/html/admin.html /usr/share/nginx/src/html/
 
 # Create uploads directory
 RUN mkdir -p /usr/share/nginx/html/uploads \
