feat: integrate environment variables for AI service and enhance connection handling in AIPlayer

--- a/srcs/dev-docker-compose.yml
+++ b/srcs/dev-docker-compose.yml
@@ -229,6 +229,8 @@ services:
     container_name: ${PONG_AI_SERVICE_NAME}
     expose:
       - '${PONG_AI_SERVICE_PORT}'
+    env_file:
+      - path: ./.env
     environment:
       - MODEL_PATH=/app/models/pong_500000/pong_moderate_final
       - LOG_LEVEL=${LOG_LEVEL:-info}
